<resources>
    <string name="app_name">Blackjack</string>
    <string name="notmember">You are not a member?</string>
    <string name="register">Register</string>
    <string name="login">Sign In</string>
    <string name="welcome">Welcome!</string>
    <string name="seeyouagain">Nice to se you again!</string>
    <string name="email">Email Adress</string>
    <string name="password">Password</string>
    <string name="help">Need Help?</string>
    <string name="create">Create</string>
    <string name="hello">Hello There!</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="imagedescriptionarrow">Red Arrow, used to go back to first screen</string>
    <string name="showpassword">Show Password</string>
    <string name="hit">Hit!</string>
    <string name="stand">Stand!</string>
    <string name="newgame">New Game</string>
    <string name="win">win</string>
    <string name="lose">lose</string>
</resources>
