<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gamelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlackjackActivity"
    android:background="@drawable/background1">


    <Button
        android:id="@+id/hitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:background="@drawable/button"
        android:onClick="onClickHit"
        android:text="@string/hit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/standBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:background="@drawable/button"
        android:onClick="onClickStand"
        android:text="@string/stand"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hitBtn"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <Button
        android:id="@+id/newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:onClick="onClickNewGame"
        android:text="@string/newgame"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hitBtn"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toEndOf="@+id/standBtn"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/firstcard"
        android:layout_width="108dp"
        android:layout_height="163dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/standBtn"
        app:layout_constraintVertical_bias="0.185" />

    <ImageView
        android:id="@+id/secondcard"
        android:layout_width="108dp"
        android:layout_height="163dp"
        android:layout_marginStart="32dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/firstcard"
        app:layout_constraintTop_toBottomOf="@+id/standBtn"
        app:layout_constraintVertical_bias="0.184" />

    <ImageView
        android:id="@+id/thirdcard"
        android:layout_width="108dp"
        android:layout_height="163dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="@+id/firstcard"
        app:layout_constraintTop_toBottomOf="@+id/newgame"
        app:layout_constraintVertical_bias="0.185" />

    <ImageView
        android:id="@+id/fourthcard"
        android:layout_width="108dp"
        android:layout_height="163dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/firstcard"
        app:layout_constraintTop_toBottomOf="@+id/newgame"
        app:layout_constraintVertical_bias="0.185" />

    <ImageView
        android:id="@+id/fifthcard"
        android:layout_width="108dp"
        android:layout_height="163dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toStartOf="@+id/firstcard"
        app:layout_constraintTop_toBottomOf="@+id/newgame"
        app:layout_constraintVertical_bias="0.185" />

    <ImageView
        android:id="@+id/sixthcard"
        android:layout_width="108dp"
        android:layout_height="163dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="@+id/firstcard"
        app:layout_constraintTop_toBottomOf="@+id/hitBtn"
        app:layout_constraintVertical_bias="0.185" />

    <ImageView
        android:id="@+id/firstcardbot"
        android:layout_width="108dp"
        android:layout_height="163dp"
        app:layout_constraintBottom_toTopOf="@+id/hitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.148"
        app:srcCompat="@drawable/ace" />

    <ImageView
        android:id="@+id/secondcardbot"
        android:layout_width="108dp"
        android:layout_height="163dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toTopOf="@+id/hitBtn"
        app:layout_constraintEnd_toEndOf="@+id/firstcardbot"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/firstcardbot"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ace" />

    <ImageView
        android:id="@+id/thirdcardbot"
        android:layout_width="108dp"
        android:layout_height="163dp"
        android:layout_marginStart="208dp"
        app:layout_constraintBottom_toTopOf="@+id/hitBtn"
        app:layout_constraintEnd_toEndOf="@+id/firstcardbot"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.16"
        app:srcCompat="@drawable/ace" />

    <ImageView
        android:id="@+id/fourthcardbot"
        android:layout_width="108dp"
        android:layout_height="163dp"
        app:layout_constraintBottom_toTopOf="@+id/hitBtn"
        app:layout_constraintEnd_toEndOf="@+id/firstcardbot"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.181"
        app:srcCompat="@drawable/ace" />

    <ImageView
        android:id="@+id/fifthcardbot"
        android:layout_width="108dp"
        android:layout_height="163dp"
        app:layout_constraintBottom_toTopOf="@+id/hitBtn"
        app:layout_constraintEnd_toEndOf="@+id/firstcardbot"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.147"
        app:srcCompat="@drawable/ace" />

    <ImageView
        android:id="@+id/sixthcardbot"
        android:layout_width="108dp"
        android:layout_height="163dp"
        app:layout_constraintBottom_toTopOf="@+id/hitBtn"
        app:layout_constraintEnd_toEndOf="@+id/firstcardbot"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.157"
        app:srcCompat="@drawable/ace" />

</androidx.constraintlayout.widget.ConstraintLayout>